--- a/testmap/htmlelements.html
+++ b/testmap/htmlelements.html
@@ -14,6 +14,8 @@
         <title></title>
     </head>
     <body>
+        <h1>Detta är en rubrik</h1>
+        <p>Detta är en paragraf</p>
         
         
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
